Fixed page overflowing at the bottom of browser window

--- a/src/scss/_chrome.scss
+++ b/src/scss/_chrome.scss
@@ -7,17 +7,17 @@
     margin:0 52px;
 
     main {
+        display:grid; grid-template-columns:1fr 3fr; grid-template-rows:100%;
+        grid-template-areas:'list content'; height:calc(100vh - 180px);
         background:#fff; box-shadow:0 0 8px rgba(0,0,0,0.5);
         border:1px solid #ccc; padding:16px;
-        display:grid; grid-template-columns:1fr 3fr;
-        grid-template-areas:'list content';
     }
 }
 
-.list-pane {border-right:1px solid #ccc; grid-area:'list'; padding-right:16px;}
+.list-pane {border-right:1px solid #ccc; grid-area:list; padding-right:16px;}
 .pane-heading {margin-top:16px; margin-left:8px}
 
 .content-pane {
-    grid-area:'content'; padding-left:16px; display:grid;
+    grid-area:content; padding-left:16px; display:grid;
     grid-template-rows:auto auto 1fr; grid-template-areas:'header' 'menu-strip' 'content';
 }
