--- a/src/scss/common_controls/_list_view.scss
+++ b/src/scss/common_controls/_list_view.scss
@@ -1,4 +1,4 @@
-.list-view {list-style:none; margin:0; padding:0;}
+.list-view {list-style:none; margin:0; padding:0; overflow-y:auto;}
 .list-view-item {
     &:first-child button {border-top:1px solid #ccc;}
 
